[package]
name = "tun2socks_demo"
version = "0.1.0"
authors = ["MoriNxN <pulsesofetott@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes  =  "1"
log = "0.4"
pretty_env_logger = "0.4"
protosocks = {git = "https://github.com/sanjitako/protosocks",branch = "develop"}
ustunet = {git = "https://github.com/sanjitako/ustcp"}
tokio = { version = "1", features = ["full"] }
argh = "0.1.4"
futures = "0.3"